[package]
name = "arrrv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["blocking", "native-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
toml = "1.0.4"
